--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Colored</title>
+    <title>Colored Time</title>
     <meta name="description" content="Simple colored page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300" rel="stylesheet">
