changed modes name

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <span id="time" class="main-text"></span>
         <span id="hex" class="main-text" style="display: none"></span>
         <div class="modes">
-          <a href="#rgb" class="mode-selector">rgb</a>
-          <a href="#rbg" class="mode-selector">rbg</a>
-          <a href="#grb" class="mode-selector">grb</a>
-          <a href="#gbr" class="mode-selector">gbr</a>
-          <a href="#brg" class="mode-selector">brg</a>
-          <a href="#bgr" class="mode-selector">bgr</a>
+          <a href="#hms" id="hms" class="mode-selector">hms</a>
+          <a href="#hsm" id="hsm" class="mode-selector">hsm</a>
+          <a href="#mhs" id="mhs" class="mode-selector">mhs</a>
+          <a href="#msh" id="msh" class="mode-selector">msh</a>
+          <a href="#shm" id="shm" class="mode-selector">shm</a>
+          <a href="#smh" id="smh" class="mode-selector">smh</a>
           <a href="javascript:null" id="displayToggle">hex</a>
         </div>
       </div>
