--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
           <a href="#msh" id="msh" class="mode-selector">msh</a>
           <a href="#shm" id="shm" class="mode-selector">shm</a>
           <a href="#smh" id="smh" class="mode-selector">smh</a>
+        </div>
+        <div>
           <a href="javascript:null" id="displayToggle">hex</a>
+          <a href="/graph" id="graphLink">graph</a>
         </div>
       </div>
     </main>
