Add download graph prompt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
           <a href="javascript:null" id="displayToggle">hex</a>
-          <a href="/graph" id="graphLink">graph</a>
+          <a href="javascript:null" id="graphLink">graph</a>
         </div>
       </div>
     </main>
